# documents

./: C++ Tips.docx  README.md  booting embedded system
Makefile_Ders/: .~lock.Makefiles.ppt#  Makefile  Makefiles.ppt  test.cpp
Makefile_Ders/makefile1/: hellofunc.c  hellomake.h  hellotest.h
Makefile_Ders/makefile1/cmake_ile/: CMakeLists.txt  CMakeLists.txt~  Makefile
Makefile_Ders/makefile2/: Makefile  Makefile~  hellomake.h
Makefile_Ders/makefile2/cmake_ile/: CMakeLists.txt  CMakeLists.txt~
Makefile_Ders/makefile2/cmake_ile/include/: hellotest.h
Makefile_Ders/makefile3/: Makefile  Makefile~  hellomake  hellomake.c  hellotest.h
Makefile_Ders/makefile4/: Makefile  hellotest.h
Makefile_Ders/makefile5/: Makefile  Makefile~
Makefile_Ders/makefile6/: Makefile
Makefile_Ders/makefile6/cmake_ile/: CMakeLists.txt  CMakeLists.txt~
Makefile_Ders/makefile6/cmake_ile/include/: hellomake.h
Makefile_Ders/makefile6/cmake_ile/include2/: hellotest.h
Makefile_Ders/makefile6/cmake_ile/src/: hellofunc2.c
Makefile_Ders/makefile6/src/: hellofunc.c
Makefile_Ders/makefile7/: Makefile  config.mk  env.cfg
Makefile_Ders/makefile7/otherprj/: Makefile  hellomake2.h  hellomakelib.c
Makefile_Ders/makefile8/: Makefile
Makefile_Ders/makefile8/otherprj/: Makefile  hellomakelib.c
Makefile_Ders/makefile8/src/: hellomake.c
